JC19-100 edits after code-reviews: rename class name for input elements; replace css selector; replace "type" attr. of an input elements

--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
 .label {
-  display: flex;
-  justify-content: space-between;
-  width: 300px;
+    display: flex;
+    justify-content: space-between;
+    width: 300px;
 }
-input {
-  width: 200px;
-  margin-left: auto;
+
+.form-input {
+    width: 200px;
+    margin-left: auto;
 }
