--- a/sw-react/src/components/MainContent/FilmMainContent/FilmMainContent.module.css
+++ b/sw-react/src/components/MainContent/FilmMainContent/FilmMainContent.module.css
@@ -13,6 +13,7 @@
 .mainData {
   width: 100%;
   height: 500px;
+  /* FIXME: Replace styles with general ones when the component changes */
   background-color: #ccc;
 }
 
@@ -51,20 +52,16 @@
   display: flex;
   justify-content: space-between;
   margin: 0;
-  /* Отступ слева в браузере IE и Opera */
+  /* Left indent in IE and Opera browser */
   padding: 0;
-  /* Отступ слева в браузере Firefox, Safari, Chrome */
+  /* Left indent in Firefox, Safari, Chrome browser */
   list-style: none;
   margin-top: 15px;
 }
 
-.informationListTitle {
+.informationListTitle {}
 
-}
-
-.informationListContent {
-  
-}
+.informationListContent {}
 
 .editButton {
   margin-top: 20px;
