JC19-156 / Refactor / Corrections after CR: several minor styling edits (changed file extensions JS => TS, Moved styles to application root, organize routing

--- a/sw-react/src/index.css
+++ b/sw-react/src/index.css
@@ -1,3 +1,11 @@
+:root {
+  --main-bg-color: #222426;
+  --main-second-bg-color:  #161616;
+  --main-accent-color: #f9ff1a;
+  --main-primary-text-color: white;
+  --main-secondary-text-color: #808080;
+}
+
 body {
   display: flex;
   flex-direction: column;
