--- a/sw-react/src/components/MainContent/FilmMainContent/FilmMainContent.module.css
+++ b/sw-react/src/components/MainContent/FilmMainContent/FilmMainContent.module.css
@@ -14,7 +14,7 @@
   width: 100%;
   height: 500px;
   /* FIXME: Replace styles with general ones when the component changes */
-  background-color: #ccc;
+  background-color: transparent;
 }
 
 .content {
@@ -27,15 +27,27 @@
 
 .poster {
   width: 250px;
+  min-width: 250px;
   height: 350px;
   background-color: rgb(170, 170, 170);
-  margin-right: 50px;
+  margin: 0 50px;
+  box-shadow: 0 0 15px 10px rgba(34, 36, 38, 1);
+}
+
+.poster img {
+  width: 100%;
+  height: 100%;
 }
 
 .filmInformation {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  color: white;
+
+  box-shadow: 0 0 25px 25px rgba(34, 36, 38, 0.7);
+  background-color:  rgba(34, 36, 38, 0.7);
+  text-shadow: 1px 1px 2px black;
 }
 
 .filmTitle {
@@ -57,6 +69,9 @@
   /* Left indent in Firefox, Safari, Chrome browser */
   list-style: none;
   margin-top: 15px;
+}
+
+.informationListItem span {
 }
 
 .informationListTitle {}
