JC19-156 / Fix / Optimized images. Updated the task list

--- a/src/pages/NotFoundPage/NotFoundPage.module.css
+++ b/src/pages/NotFoundPage/NotFoundPage.module.css
@@ -7,7 +7,7 @@
 .backgroundImage {
   height: 100%;
   width: 100%;
-  background-image: url('./../../assets/imagePlaceHolder/PageNotFound_404.png');
+  background-image: url('./../../assets/imagePlaceHolder/PageNotFound_404.jpg');
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center center;
