--- a/src/pages/LoginPage/LoginPage.module.css
+++ b/src/pages/LoginPage/LoginPage.module.css
@@ -14,6 +14,7 @@
   background-color: aliceblue;
   color: white;
   text-shadow: 0px 0 30px var(--main-bg-color);
+  background-color: var(--main-bg-color);
 }
 
 .container {
