--- a/src/components/AsideList/AsideList.module.css
+++ b/src/components/AsideList/AsideList.module.css
@@ -1,5 +1,6 @@
 .wrapper {
   height: 100%;
+  width: 100%;
 }
 
 .container {
@@ -13,7 +14,8 @@
 
 .nav {
   width: 100%;
-  max-width: 360px;
+  /* FIXME: лишнее */
+  /* max-width: 360px; */
   height: 100%;
   max-height: 100%;
   box-sizing: border-box;
