--- a/src/pages/contentPages/commonStyles.module.css
+++ b/src/pages/contentPages/commonStyles.module.css
@@ -1,3 +1,4 @@
+/* FIXME: переписать на препроцессоры, когда буду адаптировать остальные страницы. Также и Aside */
 .wrapper {
   display: flex;
   flex-direction: column;
@@ -14,6 +15,12 @@
   overflow-y: auto;
   height: 100%;
   width: 300px;
+}
+
+@media (max-width: 768px) {
+  .aside {
+    width: 100%;
+  }
 }
 
 .mainContent {
