--- a/src/components/MainContent/FilmMainContent/FilmMainContent.module.css
+++ b/src/components/MainContent/FilmMainContent/FilmMainContent.module.css
@@ -7,21 +7,32 @@
 .container {
   width: 100%;
   height: 100%;
-  padding: 0 50px;
 }
 
 .mainData {
+  display: flex;
+  align-items: flex-end;
   width: 100%;
-  height: 500px;
+  min-height: 500px;
   background-color: transparent;
 }
 
 .content {
   display: flex;
   align-items: flex-end;
+  flex-wrap: wrap;
+  padding-left: 50px;
   width: 100%;
   height: 100%;
   padding-bottom: 50px;
+}
+
+@media (max-width: 420px) {
+  .content {
+    background-color: var(--main-bg-color);
+    padding: 30px 0;
+    border-bottom: 2px solid var(--main-second-bg-color);
+  }
 }
 
 .poster {
@@ -29,11 +40,21 @@
   min-width: 250px;
   height: 350px;
   background-color: rgb(170, 170, 170);
-  margin: 0 50px;
+  margin-right: 50px;
+  margin-top: 50px;
   box-shadow: 0 0 15px 10px rgba(34, 36, 38, 1);
 }
 
+@media (max-width: 420px) {
+  .poster {
+    width: 100%;
+    height: auto;
+    margin: 0;
+  }
+}
+
 .poster img {
+  display: block;
   width: 100%;
   height: 100%;
 }
@@ -43,10 +64,16 @@
   flex-direction: column;
   align-items: flex-start;
   color: white;
-
+  margin-top: 50px;
   box-shadow: 0 0 25px 25px rgba(34, 36, 38, 0.7);
-  background-color:  rgba(34, 36, 38, 0.7);
+  background-color: rgba(34, 36, 38, 0.7);
   text-shadow: 1px 1px 2px black;
+}
+
+@media (max-width: 420px) {
+  .filmInformation {
+    margin-left: 15px;
+  }
 }
 
 .filmTitle {
@@ -70,8 +97,7 @@
   margin-top: 15px;
 }
 
-.informationListItem span {
-}
+.informationListItem span {}
 
 .informationListTitle {}
 
