JC19-156 / Refactor / Characters page adapted for mobile devices

--- a/src/components/NavigationBar/NavigationBar.module.scss
+++ b/src/components/NavigationBar/NavigationBar.module.scss
@@ -2,6 +2,7 @@
   background-color: var(--main-second-bg-color);
   padding: 10px 0;
   position: sticky;
+  height: 100%;
 
   &__container {
     display: flex;
