--- a/src/components/MainContent/PlanetMainContent/PlanetMainContent.module.scss
+++ b/src/components/MainContent/PlanetMainContent/PlanetMainContent.module.scss
@@ -1,7 +1,11 @@
 .wrapper {
   width: 100%;
   min-height: 100%;
+  height: 75vh;
   background-color: #222426;
+  @media (orientation: landscape) {
+    height: 100%;
+  }
 }
 
 .container {
@@ -9,9 +13,12 @@
   justify-content: center;
   width: 100%;
   height: 100%;
-  height: 75vh;
   padding: 0 50px;
   box-shadow: inset 0 -210px 48px 8px rgba(34, 36, 38, 1);
+
+  @media (max-width: 920px) {
+    padding: 0 15px;
+  }
 }
 
 .content {
@@ -40,27 +47,28 @@
   padding: 5px 10px;
   color: white;
   font-weight: 200;
+
 }
 
 .planetInfoItem:not(:first-child):before {
   position: absolute;
-  content: '';
+  content: "";
   width: 1px;
   height: 100%;
   bottom: 0;
   left: 0;
-  background-color: rgb(126, 130, 134, 0.7);
+  background-color: rgba(126, 130, 134, 0.7);
   margin: 5px 0;
 }
 
 .planetInfoItem:after {
   position: absolute;
-  content: '';
+  content: "";
   width: 100%;
   height: 1px;
   bottom: 0;
   right: 0;
-  background-color: rgb(126, 130, 134, 0.7);
+  background-color: rgba(126, 130, 134, 0.7);
   margin: 5px 0;
 }
 
@@ -71,15 +79,26 @@
 .planetInfoItem .description {
   color: grey;
   font-size: 14px;
+
+  @media (max-width: 920px) {
+    font-size: 12px;
+  }
 }
 
 .planetInfoItem .value {
   color: aliceblue;
   font-size: 24px;
+  @media (max-width: 920px) {
+    font-size: 18px;
+  }
 }
 
 .planetName .value {
   color: var(--main-accent-color);
   font-size: 32px;
   padding-bottom: 26px;
+
+  @media (max-width: 920px) {
+    padding-bottom: 18px;
+  }
 }
